--- a/bio.css
+++ b/bio.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Times New Roman";
+	font-family: "Crimson Text";
 	background-color: #F2FFFC;	
 }
 h1 {
@@ -7,11 +7,13 @@ h1 {
 	text-align: center;
 	background-color: #851944;
 	color: #FAFFFA;
-	font-family: "Open sans", sans serif;
 }
 h2 {
 	font-size: 40px;
-	font-family: "Open sans", sans serif;
+}
+
+h1, h2 {
+	font-family: "Open Sans Condensed", sans serif;
 }
 
 p {
