--- a/bio.css
+++ b/bio.css
@@ -2,7 +2,7 @@ body {
 	font-family: "Crimson Text";
 	background-color: #F2FFFC;	
 }
-h1 {
+main h1 {
 	font-size: 60px;
 	text-align: center;
 	background-color: #851944;
