--- a/bio.css
+++ b/bio.css
@@ -13,9 +13,36 @@ h2 {
 }
 
 h1, h2 {
-	font-family: "Open Sans Condensed", sans serif;
+	font-family: "Open Sans Condensed", sans-serif;
 }
 
 p {
 	text-align: justify;
+}
+
+main a {
+	color: #851944;
+}
+
+aside a {
+    color: inherit;
+    font-family: "Open Sans Condensed", sans-serif;
+}
+
+blockquote {
+	background-color: #D9E5E3;
+}
+
+aside {
+	background-color: #3C1D3D;
+	color: #F2FFFC;
+} 
+
+footer {
+	background-color: #000;
+	color: #F2FFFC;
+}
+
+nav a {
+    color: #F2FFFC;
 }
