--- a/bio.css
+++ b/bio.css
@@ -1,12 +1,18 @@
 body {
 	font-family: "Crimson Text";
-	background-color: #F2FFFC;	
+	font-size: 120%;
+	background-color: #F2FFFC;
+	line-height: 1.5;
+	margin:0;
 }
 main h1 {
 	font-size: 60px;
 	text-align: center;
 	background-color: #851944;
 	color: #FAFFFA;
+	padding: 25px;
+	margin:0;
+	border-bottom: 10px solid #000000;
 }
 h2 {
 	font-size: 40px;
@@ -31,11 +37,17 @@ aside a {
 
 blockquote {
 	background-color: #D9E5E3;
+	padding: 20px;
+	border: 10px solid #C2CCCA;
+	width: 250px;
+	box-sizing: border-box;
+	margin: 0;
 }
 
 aside {
 	background-color: #3C1D3D;
 	color: #F2FFFC;
+	text-align: center;
 } 
 
 footer {
@@ -45,4 +57,10 @@ footer {
 
 nav a {
     color: #F2FFFC;
+}
+
+main div {
+	width: 720px;
+	margin: auto;
+
 }
