--- a/bio.css
+++ b/bio.css
@@ -13,7 +13,7 @@ strong {
 	font-weight: bold;
 }
 
-main h1 {
+.titulo-principal {
 	font-size: 60px;
 	text-align: center;
 	background-color: #851944;
@@ -26,7 +26,7 @@ h2 {
 	font-size: 30px;
 }
 
-main div {
+.conteudo {
 	width: 720px;
 	margin: auto;
 	padding: 30px
@@ -45,7 +45,7 @@ main a {
 	color: #851944;
 }
 
-blockquote {
+.citacoes {
 	background-color: #D9E5E3;
 	padding: 20px;
 	border: 10px solid #C2CCCA;
@@ -54,9 +54,10 @@ blockquote {
 	margin:20px 40px;
 }
 
-aside {
+#navegacao-site {
 	background-color: #3C1D3D;
 	color: #F2FFFC;
+	padding: 30px;
 	text-align: center;
 } 
 
@@ -71,7 +72,7 @@ aside a {
     font-family: "Open Sans Condensed", sans-serif;
 }
 
-aside li {
+.icones-sociais li {
 	display: inline-block;
 }
 
@@ -79,8 +80,24 @@ nav a {
     color: #F2FFFC;
 }
 
-footer {
+#rodape-pagina {
 	background-color: #000;
 	color: #F2FFFC;
+	text-align: center;
 }
 
+article {
+	margin-bottom: 10px;
+	padding-bottom: 30px;
+	border-bottom: 1px solid #ccc;
+}
+
+.leia-mais {
+	font-size: 24px;
+	display: block;
+	padding: 8px;
+	text-align:center;
+	background-color: #E6E7E8;
+	text-decoration: none;
+	margin: 16px;
+}
